S106 Do not raise on Java 25 compact source files